--- a/cb.yaml
+++ b/cb.yaml
@@ -4,6 +4,6 @@ steps:
     - PROJECT_ROOT=github.com/alexvanboxel/reactor
     args: ['install', 'github.com/alexvanboxel/reactor/pkg/reactor']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '--tag=gcr.io/$PROJECT_ID/reactor:1', '-f', 'Dockerfile-reactor', '.']
+    args: ['build', '--tag=gcr.io/$PROJECT_ID/reactor:3', '-f', 'Dockerfile', '.']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/reactor:1']
+    args: ['push', 'gcr.io/$PROJECT_ID/reactor:3']
