--- a/k8s/reactor2.yaml
+++ b/k8s/reactor2.yaml
@@ -26,102 +26,102 @@ spec:
             value: '2'
         ports:
         - containerPort: 3330
----
-##################################################################################################
-#
-##################################################################################################
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: reactor-a-v2
-  namespace: reactor
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: reactor-a
-        version: '2'
-    spec:
-      containers:
-      - name: api
-        image: gcr.io/iotope-early-access/reactor:3
-        imagePullPolicy: Always
-        env:
-          - name: PORT
-            value: '3331'
-          - name: NAME
-            value: 'a'
-          - name: VERSION
-            value: '2'
-          - name: MODE
-            value: '2'
-        ports:
-        - containerPort: 3331
----
-##################################################################################################
-#
-##################################################################################################
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: reactor-b-v2
-  namespace: reactor
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: reactor-b
-        version: '2'
-    spec:
-      containers:
-      - name: reviews
-        image: gcr.io/iotope-early-access/reactor:3
-        imagePullPolicy: Always
-        env:
-          - name: PORT
-            value: '3332'
-          - name: NAME
-            value: 'b'
-          - name: VERSION
-            value: '2'
-          - name: MODE
-            value: '2'
-        ports:
-        - containerPort: 3332
----
-##################################################################################################
-#
-##################################################################################################
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: reactor-c-v2
-  namespace: reactor
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: reactor-c
-        version: '2'
-    spec:
-      containers:
-      - name: api
-        image: gcr.io/iotope-early-access/reactor:3
-        imagePullPolicy: Always
-        env:
-          - name: PORT
-            value: '3333'
-          - name: NAME
-            value: 'c'
-          - name: VERSION
-            value: '2'
-          - name: MODE
-            value: '2'
-        ports:
-        - containerPort: 3333
+#---
+###################################################################################################
+##
+###################################################################################################
+#apiVersion: extensions/v1beta1
+#kind: Deployment
+#metadata:
+#  name: reactor-a-v2
+#  namespace: reactor
+#spec:
+#  replicas: 1
+#  template:
+#    metadata:
+#      labels:
+#        app: reactor-a
+#        version: '2'
+#    spec:
+#      containers:
+#      - name: api
+#        image: gcr.io/iotope-early-access/reactor:3
+#        imagePullPolicy: Always
+#        env:
+#          - name: PORT
+#            value: '3331'
+#          - name: NAME
+#            value: 'a'
+#          - name: VERSION
+#            value: '2'
+#          - name: MODE
+#            value: '2'
+#        ports:
+#        - containerPort: 3331
+#---
+###################################################################################################
+##
+###################################################################################################
+#apiVersion: extensions/v1beta1
+#kind: Deployment
+#metadata:
+#  name: reactor-b-v2
+#  namespace: reactor
+#spec:
+#  replicas: 1
+#  template:
+#    metadata:
+#      labels:
+#        app: reactor-b
+#        version: '2'
+#    spec:
+#      containers:
+#      - name: reviews
+#        image: gcr.io/iotope-early-access/reactor:3
+#        imagePullPolicy: Always
+#        env:
+#          - name: PORT
+#            value: '3332'
+#          - name: NAME
+#            value: 'b'
+#          - name: VERSION
+#            value: '2'
+#          - name: MODE
+#            value: '2'
+#        ports:
+#        - containerPort: 3332
+#---
+###################################################################################################
+##
+###################################################################################################
+#apiVersion: extensions/v1beta1
+#kind: Deployment
+#metadata:
+#  name: reactor-c-v2
+#  namespace: reactor
+#spec:
+#  replicas: 1
+#  template:
+#    metadata:
+#      labels:
+#        app: reactor-c
+#        version: '2'
+#    spec:
+#      containers:
+#      - name: api
+#        image: gcr.io/iotope-early-access/reactor:3
+#        imagePullPolicy: Always
+#        env:
+#          - name: PORT
+#            value: '3333'
+#          - name: NAME
+#            value: 'c'
+#          - name: VERSION
+#            value: '2'
+#          - name: MODE
+#            value: '2'
+#        ports:
+#        - containerPort: 3333
 ---
 ##################################################################################################
 #
