First iteration of k8s mode

--- a/cb.yaml
+++ b/cb.yaml
@@ -1,11 +1,9 @@
 steps:
   - name: 'gcr.io/cloud-builders/go'
     env:
-    - PROJECT_ROOT=github.com/alexvanboxel/reactor
-    args: ['build', 'github.com/alexvanboxel/reactor/pkg/reactor']
+    - "PROJECT_ROOT=github.com/alexvanboxel/reactor"
+    args: ['install', 'github.com/alexvanboxel/reactor/cmd/reactor']
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', '${_DOCKER_IMAGE}', '.' ]
-substitutions:
-  _DOCKER_IMAGE: eu.gcr.io/quantum-build/reactor:latest # default value
+    args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/reactor:latest', '.' ]
 images:
-- '${_DOCKER_IMAGE}'
+- 'eu.gcr.io/$PROJECT_ID/reactor:latest'
